--- a/src/layout/interview.css
+++ b/src/layout/interview.css
@@ -14,8 +14,11 @@
     background-color: brown;
 }
 
-.postCover {
-    width: 200px;
+.featuredImage {
+    opacity: 1;
+    width: 512px;
+    height: 512px;
+    background-color: chartreuse;
 }
 
 
