pivot: added email, changed headline, to be deployed

--- a/src/layout/email.css
+++ b/src/layout/email.css
@@ -1,16 +1,17 @@
-@import url('https://fonts.googleapis.com/css2?family=Spectral:ital,wght@0,400;0,700;1,400;1,800&display=swap');
-
-p {
-    font: 400 1.1em Spectral, serif;
-    line-height: 140%;
-}
+@import url('https://fonts.googleapis.com/css2?family=Spectral:ital,wght@0,400;0,600;1,400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cutive+Mono&display=swap');
 
 h1 {
-    font: 500 1.4em Spectral, serif;
+    font: 600 1.4em Spectral, serif;
 }
 
 h2 {
     font: 400 0.7em Spectral, serif;
+}
+
+p {
+    font: 400 1.1em Spectral, serif;
+    line-height: 140%;
 }
 
 a {
@@ -18,11 +19,17 @@ a {
 }
 
 a:hover {
-    background: #FFFFFF;
-    border: .1em solid #e9e9e9;
+    background: #ffffff;
+    border: .1em solid #F78270;
     border-radius: .1em;
     padding: .2em .4em .1em .4em;
-    box-shadow: -.3em .3em 0px #d6d6d6;
+    box-shadow: -.3em .3em 0px #714060;
     text-decoration: none;
     z-index: 100;
+}
+
+.newsletter-footer p, .newsletter-colophon p {
+    color: #7a7a7a;
+    font: 400 .8em Cutive, monospace;
+    line-height: 120%;
 }
