--- a/src/layout/fonts.css
+++ b/src/layout/fonts.css
@@ -3,7 +3,7 @@
 /* Google hosted fonts */
 /* -------------------------------------------- */
 
-@import url('https://fonts.googleapis.com/css2?family=Spectral:ital,wght@0,400;0,700;1,400;1,800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Spectral:ital,wght@0,400;600;0,700;1,400;1,800&display=swap');
 
 
 
