--- a/src/layout/index.css
+++ b/src/layout/index.css
@@ -1,8 +1,8 @@
 /* IMPORTS FOR OTHER SECTIONS */
 @import url(~sanitize.css);         /* For cross browser wonkiness */
 @import url(fonts.css);             /* All hosted and external fonts */
-@import url(800.css);               /* Mobile styles */
-@import url(1200.css);              /* Desktop styles */
+/* @import url(400.css);               Mobile styles */
+@import url(1000.css);              /* Desktop styles */
 @import url(interview.css);         /* Interview page has basic bg and fonts & its own layout */
 
 /* COLOR VARIABLES */
@@ -11,7 +11,8 @@
     --color-bg-coral-dark: rgb(247, 130, 112);
     --color-bg-gray: rgb(229, 229, 229);
     --color-bg-gray-dark: rgb(214, 214, 214);
-    --color-card: #FFFFFF;
+    --color-text: rgb(41, 41, 41);
+    --color-card: rgb(255, 255, 242);
     --color-listingLink: #2e2e2e;
     --color-listing-purple: #714060;
     --color-listingHover-shadow: rgba(113, 64, 96, 0.3);
@@ -27,6 +28,7 @@
 body {
     font-size: 14px;
     line-height: 1.3em;
+    color: var(--color-text);
 }
 
 a {
