--- a/src/layout/400.css
+++ b/src/layout/400.css
@@ -1,26 +1,46 @@
 /* MOBILE SCREEN */
 
-@media only screen and (min-width: 400px) { 
+@media only screen and (min-width: 300px) { 
 
+    /* BACKGROUND PATTERN */
     .pattern {
-        grid-template-columns: .2em 1fr .2em;
-        grid-template-rows: .2em 1fr .2em;
+        background: url(../../static/pattern04c.png);
+        background-color: var(--color-bg-coral);
+        display: grid;
+        grid-template-columns: .5em 1fr .5em;
+        grid-template-rows: 2em 1fr 2em;
     }
+    /* ----------------------------------------------- */
 
     .container {
-        grid-template-rows: 1fr auto 8em;
+        display: grid;
+        grid-row: 2;
+        grid-column: 2;
         grid-template-columns: repeat(6, 1fr);
+        grid-template-rows: 1fr auto auto auto auto 8em;
         grid-gap: .5em;
+        grid-auto-flow: dense;    
+        background-color: var(--color-card);
+        box-shadow:  0px 0px 30px var(--color-bg-coral-dark);
+        border-radius: 10px;
         grid-template-areas:
-            "Logo Hello Hello Hello Hello Hello";
-        background-color: blue;
-    }
+            ".      Logo        .           .           .           .           "
+            ".      Hello       Hello       Hello       Hello       Hello       "
+            ".      Interviews  Interviews  Interviews  Interviews  Interviews  "
+            ".      Tagbox      Tagbox      Tagbox      Tagbox      Tagbox      "
+            ".      Directory   Directory   Directory   Directory   Directory   "
+            /* ". . Footer . . " */
+            ;
+    }  
 
-    /* .logo {
-        display: none;
-        grid-column-start: 2;
-        grid-column-end: 4;
-    } */
+    .logo {
+        display: grid;
+        grid-area: Logo;
+        /* display: none; */
+        background-image: url(../../static/mark_strokes.svg);
+        background-repeat: no-repeat;
+        background-size: 100%;
+    }
 
 
     .introHello {
@@ -44,21 +64,21 @@
 
     .directory {
         display: grid;
-        grid-column-start: 2;
+        /* grid-column-start: 2;
         grid-column-end: 12;
-        grid-row-start: 2;
+        grid-row-start: 2; */
         grid-auto-flow: row;
-        grid-template-columns: repeat(4, 1fr);
+        /* grid-template-columns: repeat(4, 1fr); */
         grid-gap: .5em;
     }
 
     .directoryBlock {
-        grid-column: span 4;
+        /* grid-column: span 4; */
         font: 400 1.5em JetBrains-Mono, sans-serif;
     }
 
     .directoryBlockFilter {
-        grid-column: span 4;
+        /* grid-column: span 4; */
         font: 400 .8em JetBrains-Mono, sans-serif;
     }
 }
